# My_Journal

./: .gitignore  CMakeLists.txt  Configure.ini  README.md  app.py  command.txt  filter.py  package.json  test.py  vn.json
Design/: mainscreen.psxprj
camerabuild/: CMakeCache.txt  Makefile  cmake_install.cmake  trip
camerabuild/.qt/: QtDeploySupport.cmake
camerabuild/.qt/deploy_qml_imports/: trip.cmake
camerabuild/trip_autogen/: moc_predefs.h  mocs_compilation.cpp
camerabuild/trip_autogen/6YEA5652QU/: moc_album.cpp  moc_album.cpp.d  moc_button.cpp  moc_button.cpp.d
camerabuild/trip_autogen/PU7KQOIMRW/: moc_camera.cpp  moc_camera.cpp.d  moc_cameraworker.cpp  moc_cameraworker.cpp.d
camerabuild/trip_autogen/include/: cameraworker.moc.d
configure/: configure.init  libs.txt
include/: album.h  button.h  configure.h  gps.h  mainwindow.h  trip.h
include/test/: oldcamera.h  testcamera.h
include/vault/: camera.h  cameraworker.h  gscamera.h
raspberrypi_code/: album_db.py  app.py  button.py  camera.py  cameratest.py  gps.py  gpst.py  map.py  test.py  test1.py
reacttrip/: package.json
reacttrip/tripapp/: app.json  package.json
src/: gpsworker.cpp  main.cpp  mainwindow.cpp
src/album/: album.cpp  albumworker.cpp
src/camera/: camera.cpp  cameraworker.cpp  oldcamera.cpp
src/camera-app/: CMakeLists.txt  Configure.ini  camera.h  camerasetting.cpp  cameraworker.cpp  cameraworker.h  main.cpp  maincamera.cpp
src/default/: button.cpp  map.cpp  statusbar.cpp
src/gps/: gps.cpp  gpsworker.cpp
src/test/: test.cpp  test.py  testcamera.cpp
src/trip/: triplayout.cpp  tripworker.cpp
src/vault/: gscamera.cpp
static/asset/images/: {city}.json
static/asset/images/HaNoi/: Hanoi.json
static/asset/js/: album.js  gallerry.js  imagesilder.js  triplist.js
static/asset/mapjs/: mapLoad.js
static/css/: album.css  leaflet.css  styles.css  triplist.css
static/logs/: draft.json  hanoi.json  log.json
templates/: album.html  camera.html  index.html  map.html  test.html
trip/: CMakeLists.txt  main.cpp
trip_react/: app.json  package.json
